product: create has "partial" success state
